syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_package = "com.yuuuzzzin.offoff_android";
option java_multiple_files = true;

message ScheduleType {
  string name = 1;
  google.protobuf.Timestamp startTime = 2;
  google.protobuf.Timestamp endTime = 3;
}

message ScheduleTypeList {
  repeated ScheduleType scheduleType = 1;
}